@@ -40,7 +40,6 @@
 extern struct poptOption gconf_options[];
 
 #include <libgnome/libgnome-init.h>
-#include <bonobo/libbonobo-init.h>
 
 #include "libgnomeP.h"
 #include <errno.h>
@@ -50,36 +49,25 @@ extern struct poptOption gconf_options[];
 #include <gobject/gvaluetypes.h>
 
 #include <liboaf/liboaf.h>
-#include <bonobo/libbonobo.h>
+#include <libbonobo.h>
 
 #include <libgnomevfs/gnome-vfs-init.h>
 
-/*****************************************************************************
- * oaf
- *****************************************************************************/
-
 static void
-gnome_oaf_pre_args_parse (GnomeProgram *program, GnomeModuleInfo *mod_info)
-{
-    oaf_preinit (program, mod_info);
-}
-
-static void
-gnome_oaf_post_args_parse (GnomeProgram *program, GnomeModuleInfo *mod_info)
+libbonobo_post_args_parse (GnomeProgram    *program,
+			   GnomeModuleInfo *mod_info)
 {
     int dumb_argc = 1;
     char *dumb_argv[] = {NULL};
 
-    oaf_postinit (program, mod_info);
+    dumb_argv [0] = program_invocation_name;
 
-    dumb_argv[0] = program_invocation_name;
-    (void) oaf_orb_init (&dumb_argc, dumb_argv);
+    bonobo_init (&dumb_argc, dumb_argv);
 }
 
-GnomeModuleInfo gnome_oaf_module_info = {
-    "gnome-oaf", VERSION, N_("GNOME OAF Support"),
-    NULL,
-    gnome_oaf_pre_args_parse, gnome_oaf_post_args_parse,
+GnomeModuleInfo libbonobo_module_info = {
+    "libbonobo", VERSION, N_("Bonobo Support"),
+    NULL, NULL, libbonobo_post_args_parse,
     oaf_popt_options
 };
 
@@ -263,7 +251,7 @@ gnome_gconf_post_args_parse (GnomeProgram *program, GnomeModuleInfo *mod_info)
 }
 
 static GnomeModuleRequirement gnome_gconf_requirements[] = {
-    { VERSION, &gnome_oaf_module_info },
+    { VERSION, &libbonobo_module_info },
     { NULL, NULL }
 };
 
@@ -274,32 +262,6 @@ GnomeModuleInfo gnome_gconf_module_info = {
     gconf_options,
     NULL, gnome_gconf_constructor,
     NULL, NULL
-};
-
-/*****************************************************************************
- * libbonobo
- *****************************************************************************/
-
-static void
-libbonobo_post_args_parse (GnomeProgram *program, GnomeModuleInfo *mod_info)
-{
-    CORBA_ORB orb;
-
-    orb = oaf_orb_get ();
-
-    bonobo_init (orb, CORBA_OBJECT_NIL, CORBA_OBJECT_NIL);
-}
-
-static GnomeModuleRequirement libbonobo_requirements[] = {
-    { VERSION, &gnome_oaf_module_info },
-    { NULL, NULL }
-};
-
-GnomeModuleInfo libbonobo_module_info = {
-    "libbonobo", VERSION, N_("Bonobo"),
-    libbonobo_requirements,
-    NULL, libbonobo_post_args_parse, NULL,
-    NULL, NULL, NULL, NULL
 };
 
 /*****************************************************************************
