@@ -1,3 +1,8 @@
+2001-04-18  Michael Meeks  <michael@ximian.com>
+
+	* libgnome-init.c (gnome_oaf_module_info): kill,
+	(libbonobo_module_info): Update.
+
 2001-04-18  Martin Baulig  <baulig@suse.de>
 
 	* libgnome-init.c (gnome_oaf_module_info): Put this back.
